[tool.poetry]
name = "portray"
version = "1.4.0"
description = "Your Project with Great Documentation"
authors = ["Timothy Crosley <timothy.crosley@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
hug = "^2.6"
mkdocs = "^1.0"
pdocs = "^1.0.2"
toml = "^0.10.0"
mkdocs-material = "^5.0"
GitPython = "^3.0"
pymdown-extensions = "^7.0"
yaspin = "^0.15.0"

[tool.poetry.dev-dependencies]
vulture = "^1.0"
bandit = "^1.6"
pytest = "^5.1"
safety = "^1.8"
isort = "^4.3"
flake8-bugbear = "^19.8"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
mypy = "^0.720.0"
ipython = "^7.7"
pytest-cov = "^2.7"
pytest-mock = "^1.10"
pep8-naming = "^0.8.2"
hypothesis-auto = "^0.0.4"
pprofile = "^2.0"

[tool.black]
line-length = 100

[tool.poetry.scripts]
portray = "portray.cli:__hug__.cli"

[tool.portray.mkdocs.theme]
favicon = "art/logo_small.png"
logo = "art/logo_small.png"
name = "material"
palette = {primary = "blue grey", accent = "pink"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

