[tool.poetry]
name = "portray"
version = "1.8.0"
description = "Your Project with Great Documentation"
authors = ["Timothy Crosley <timothy.crosley@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
hug = ">=2.6"
mkdocs = ">=1.3.0,<1.4.0"
pdocs = ">=1.2.0"
toml = ">=0.10.0"
mkdocs-material = ">=7.0"
GitPython = ">=3.0"
pymdown-extensions = ">=7.0"
yaspin = ">=0.15.0,<3"
livereload = ">=2.6.3"

[tool.poetry.dev-dependencies]
bandit = ">=1.6"
pytest = ">=5.1"
safety = ">=1.8"
black = {version = ">1.0.0", python = ">=3.7.0,<4.0"}
mypy = ">0.730.0"
types-toml = ">0.0"
ipython = ">=7.7"
pytest-cov = ">=2.7"
pytest-mock = ">=1.10"
hypothesis-auto = {version = ">=0.0.4", python = ">=3.7.0,<4.0"}
pprofile = ">=2.0"
ruff = ">=0.0.191"
cruft = {version = ">=2.2", python = ">=3.7.0,<4.0"}

[tool.poetry.scripts]
portray = "portray.cli:__hug__.cli"

[tool.portray.mkdocs.theme]
favicon = "art/logo_small.png"
logo = "art/logo_small.png"
name = "material"
palette = {primary = "blue grey", accent = "pink"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.isort]
known-third-party = ["portray"]

[tool.black]
line-length = 100
